--- a/themes/summer-house/styles/02-components/02-layouts/single.styl
+++ b/themes/summer-house/styles/02-components/02-layouts/single.styl
@@ -1,7 +1,7 @@
 .article
   max-width 100em
   margin 0 auto
-  @extend .nest-3, .pad-h-3, .pad-b-3
+  @extend .nest-3, .pad-h-3, .pad-b-4
 
 .article-header
   max-height 100vh
@@ -15,7 +15,8 @@
 
 .article-body-main
   @extend .nest-4
-  max-width 40em
+  max-width 45em
+  text-align justify
 
 .article-gallery
   null
